<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>laser_uav_estimators</name>
  <version>0.0.0</version>
  <description>Advanced 13-state Extended Kalman Filter (EKF) for UAV state estimation, providing
    robust multi-sensor fusion of odometry sources (VIO, LIO, PX4) and IMU data for accurate
    position, velocity, and attitude estimation in autonomous flight operations</description>

  <maintainer email="wagnergarcia@eng.ci.ufpb.br">Wagner Dantas Garcia</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>laser_uav_lib</depend>

  <build_depend>libeigen3-dev</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <exec_depend>libeigen3-dev</exec_depend>

  <build_depend>libautodiff-dev</build_depend>
  <exec_depend>libautodiff-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>